--- a/.github/workflows/trial.yml
+++ b/.github/workflows/trial.yml
@@ -14,48 +14,58 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
+    - name:  Install Google Chrome 
+      run:   |
+              chmod +x ./scripts/InstallChrome.sh
+                          ./scripts/InstallChrome.sh 
         
     - name: Build with Maven
       run: |- 
          mvn -B package --file pom.xml
          
-  test_1:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
+  # test_1:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
     
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+  #   - name: Set up JDK 1.8
+  #     uses: actions/setup-java@v1
+  #     with:
+  #       java-version: 1.8
 
         
-    - name: Test with Maven
-      run: |-
-         mvn clean test
+  #   - name: Test with Maven
+  #     run: |-
+  #        mvn clean test
          
-  test_2:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
+  # test_2:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
     
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+  #   - name: Set up JDK 1.8
+  #     uses: actions/setup-java@v1
+  #     with:
+  #       java-version: 1.8
 
-    - name: Test with Maven
-      run: mvn -B package --file pom.xml test
-   
-    # - name: Set up JDK 1.8
-    #   uses: actions/setup-java@v1
-    #   with:
-    #     java-version: 1.8
-    #     server-id: github 
-    #     settings-path: ${{ github.workspace }} 
-    # - name:  Install Google Chrome 
-    #   run:   |
-    #           chmod +x ./scripts/InstallChrome.sh
-    #                       ./scripts/InstallChrome.sh 
-    # - name: Build with Maven
-    #   run: mvn -B package --file pom.xml test
+  #   - name: Test with Maven
+  #     run: mvn -B package --file pom.xml test
+
+
+  #   - uses: actions/checkout@v2
+    
+  #   - name: Set up JDK 1.8
+  #     uses: actions/setup-java@v1
+  #     with:
+  #       java-version: 1.8
+  #       server-id: github 
+  #       settings-path: ${{ github.workspace }} 
+
+        
+  #   - name:  Install Google Chrome 
+  #     run:   |
+  #             chmod +x ./scripts/InstallChrome.sh
+  #                         ./scripts/InstallChrome.sh 
+  #   - name: Build with Maven
+  #     run: mvn -B package --file pom.xml test
